# battery_ETL_streamlit

./: .coverage  .env  .env.template  .replit  CALB20Ah_ BMW power map_as 24Ah_0331_Step.csv  LGE5.5Ah_BMW power map_0331_Step.csv  PROGRESS.md  Procfile  README.md  alembic.ini  battery.db  check_db.py  check_db_structure.py  check_measurement_schema.py  debug_experiment_14.py  debug_experiment_18.py  debug_measurement_flow.py  debug_real_measurement_issue.py  debug_save_measurements.py  fix_and_test_experiment_14.py  fix_experiment_14_measurements.py  install_dependencies.bat  main.py  project_snapshot.json  project_snapshot.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt  start_streamlit.bat  streamlit_app.py  test_dashboard_debug.py  test_dashboard_fix.py  test_data_meta_complete_flow.py  test_data_meta_functionality.py  test_database_connection.py  test_full_pipeline.py  test_operator_field.py  test_operator_simple.py  test_pre_test_rest_time_debug.py  (+6 more)
.streamlit/: config.toml
Document/: PROGRESS.md  measurement_debugging_findings.md
app/: __init__.py
archive/: dashboard_page_test_funciton.py  refactored_upload.py
attached_assets/: EVE_M41_CLC_FCV_M-table_Peak_charge_60s_0220_Detail.csv  PRD_4.txt  Pasted-Error-processing-example-files-builtins-TypeError-Object-of-type-DataFrame-is-not-JSON-serializab-1746503708651.txt  Pasted-Error-processing-files-psycopg2-errors-InvalidSchemaName-schema-np-does-not-exist-LINE-1-6--1746167963349.txt  task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  (+13 more)
(+171 files in other folders)
