[project]
name = ""
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2",
    "anthropic>=0.50.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "python-dotenv>=1.1.0",
    "sqlmodel>=0.0.24",
    "streamlit>=1.45.0",
]
